# mini_cpp_proj

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  HelloWorld.cpp
test/: CMakeLists.txt  hello_world_tests.cpp
